--- a/index.html
+++ b/index.html
@@ -7,5 +7,26 @@
 </head>
 <body>
     <h1>Cześć</h1>
+     <!-- tak się dodaje komenatrze ctrl + / -->
+     <!-- a tag html dla linku -->
+     <!-- zeby strona otworzyła się w nowym oknie trzeba do linka dodać target="_blank" -->
+     <div>
+        <a href="https://google.com" target="_blank"> Przejdź do Google</a>
+     <!-- jesli chcemy dodać do linka plik do pobrania -->
+     <div>
+            <a href="link_do_pdfa.pdf" download>Pobierz produkty</a>
+     </div>
+        <a href="tel:+49234959456">+49234959456</a>
+    <div>
+        <a href="mailto:asd@qwert.com">asd@qwert.com</a>
+    </div>
+        <button type="button">Buy product now</button>
+     </div>
+     
+
+
+<!-- img tag html dla obrazu -->
+<img src="" alt="obrazek mojej sekcji o mnie"
+
 </body>
 </html>
